[package]
name = "common"
version = "0.1.0"
edition = "2021"
author = "Vegard Mosand"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.3.4"
