[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.3.4"
pnet_datalink = "0.31.0"
ipnetwork = "0.20.0"
rand = "0.8.5"

[dependencies.pnet]
version = "0.31.0"
